Renamed article template

--- a/www/src/css/_hero.scss
+++ b/www/src/css/_hero.scss
@@ -19,7 +19,7 @@
     max-width: 1500px; // Positioning of background logo
     margin-left: auto;
     margin-right: auto;
-    background-image: url('/large-logo.svg');
+    background-image: url('../icons/large-logo.svg');
     background-repeat: no-repeat;
     background-position: 100% 100px;
     background-size: 50% auto;
