--- a/www/src/css/prism.scss
+++ b/www/src/css/prism.scss
@@ -19,10 +19,10 @@
 }
 
 .gatsby-highlight-code-line {
-  background-color: rgba(255,255,255,0.1);
+  background-color: #393d45;
   display: block;
   margin: -0.125rem -1rem;
-  padding: 0.125rem;
+  padding: 0.125rem 1rem;
 }
 
 code[class*="language-"],
