--- a/www/src/css/_home_example.scss
+++ b/www/src/css/_home_example.scss
@@ -70,7 +70,7 @@
     flex: 1.61;
   }
 
-  .alt-design & .cm-s-react.CodeMirror {
+  .cm-s-react.CodeMirror {
     border-radius: 10px 0 0 10px;
   }
 }
