--- a/www/src/css/_traverse_nav.scss
+++ b/www/src/css/_traverse_nav.scss
@@ -13,6 +13,11 @@
       border-color: #fff;
     }
   }
+
+  & + & {
+    text-align: right;
+    // justify-content: flex-end;
+  }
 }
 
 .traverse_nav__label {
