--- a/www/src/css/_article.scss
+++ b/www/src/css/_article.scss
@@ -17,6 +17,7 @@
   display: flex;
   justify-content: space-between;
   align-items: baseline;
+  position: relative;
 }
 
 .article__title {
@@ -24,6 +25,7 @@
   color: $c-dark;
   letter-spacing: -0.02em;
   padding-top: 80px;
+  // padding-right: 140px;
 }
 
 .article__edit_link {
@@ -32,6 +34,10 @@
   border-color: $c-divider;
   transition: all 0.2s ease;
   transition-propery: color, border-color;
+  white-space: nowrap;
+  position: absolute;
+  bottom: 5px;
+  right: 0;
 
   &::after {
     top: -5px;
@@ -54,12 +60,71 @@
   padding-bottom: 120px;
   // padding-right: 40px;
 
-  p {
+  > p {
     @include f-panel;
     max-width: 590px;
 
     &:not(:first-child) {
       padding-top: 30px;
+    }
+
+    &:first-child {
+      @extend .article__sub;
+      max-width: none;
+      padding-top: 0;
+    }
+  }
+
+  .gatsby-highlight {
+    margin-top: 30px;
+    margin-left: -25px;
+
+    code {
+      font-size: 100%;
+    }
+
+    code[class*="language-"], pre[class*="language-"] {
+      margin-left: 25px;
+    }
+  }
+
+  ul {
+    list-style: disc;
+  }
+
+  ol {
+    list-style: decimal;
+  }
+
+  ul, ol {
+    margin-left: -5px;
+
+    li {
+      font-size: 18px;
+      display: list-item;
+      padding-left: 5px;
+
+      + li {
+        margin-top: 10px;
+      }
+    }
+  }
+
+  ul:not(:first-child),
+  ol:not(:first-child) {
+    padding-top: 30px;
+
+
+  }
+
+  a:not(.anchor) {
+    background-color: rgba(#bbeffd, 0.5);
+    border-bottom: 1px solid rgba(#000, 0.2);
+    color: #1a1a1a;
+
+    &:hover {
+      background-color: rgba(#bbeffd, 1);
+      border-bottom-color: #1a1a1a;
     }
   }
 
@@ -67,15 +132,37 @@
     @include f-h2;
     padding-top: 45px;
   }
+
+  h3 {
+    @include f-h3;
+    padding-top: 45px;
+
+    & + p:not(:first-child) {
+      padding-top: 20px;
+    }
+  }
+
+  p > code,
+  li > code {
+    background: rgba(#ffe564, 0.5);
+    padding: 0 3px;
+    color: #444;
+  }
+
+  blockquote {
+    @extend .note;
+    max-width: 650px;
+    padding-top: 40px;
+    margin-left: -25px;
+    margin-top: 70px;
+    margin-bottom: 20px;
+  }
 }
 
 .article__editor {
   padding-top: 40px;
   margin-left: -35px;
-
-  .alt-design & {
-    margin-right: -35px;
-  }
+  margin-right: -35px;
 
   + p {
     padding-top: 35px;
@@ -89,39 +176,25 @@
 }
 
 .article__traverse_nav {
-  padding-right: 40px;
   margin-left: -999em;
   padding-left: 999em;
+  margin-right: -999em;
+  padding-right: 999em;
   background: $c-dark;
   color: #fff;
   border-color: rgba(#fff, 0.3);
   padding-top: 50px;
   padding-bottom: 50px;
-
-
-  .alt-design & {
-    margin-right: -999em;
-    padding-right: 999em;
-    position: relative;
-    z-index: 1;
-  }
+  position: relative;
+  z-index: 1;
 }
 
 .article__nav {
   // Deduct the margin-left value from width
   width: calc((1.5 / 6 * 100%));
-  // width: calc((2 / 6 * 100%) - ((0.5 / 6 * 100%) + 20px));
-  // margin-left: calc((0.5 / 6 * 100%) + 20px);
   padding-left: calc((0.5 / 6 * 100%) - 20px);
-  background-color: $c-darker;
-  color: #fff;
   display: flex;
   align-items: stretch;
-
-  .alt-design & {
-    color: inherit;
-    background-color: transparent;
-  }
 }
 
 .article__nav_mid {
