added edit link back

--- a/www/src/css/_article.scss
+++ b/www/src/css/_article.scss
@@ -18,6 +18,7 @@
   justify-content: space-between;
   align-items: baseline;
   position: relative;
+  padding-right: 100px;
 }
 
 .article__title {
