Fixed several issues with margin and max-width on article page

--- a/www/src/css/prism.scss
+++ b/www/src/css/prism.scss
@@ -21,8 +21,8 @@
 .gatsby-highlight-code-line {
   background-color: #393d45;
   display: block;
-  margin: -0.125rem -1rem;
-  padding: 0.125rem 1rem;
+  margin: -0.125rem 0;
+  padding: 0.125rem 0;
 }
 
 code[class*="language-"],
