Added some more markdown sections and reorganized a bit

--- a/www/src/css/_header.scss
+++ b/www/src/css/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: rgba($c-darker, 0.95);
+  background-color: $c-darker;
   color: #fff;
   -webkit-font-smoothing: antialiased;
   overflow: hidden;
