--- a/www/src/css/setup/_variables.scss
+++ b/www/src/css/setup/_variables.scss
@@ -5,6 +5,7 @@ $c-text: #1a1a1a; // very dark grey / black substitute
 $c-subtle: #777; // light grey for text
 $c-divider: #ececec; // very light grey
 $c-note: #ffe564; // yellow
+$c-error: #ff6464; // yellow
 
 $breakpoints: (
   xsmall: (start: nil, end: 599),
