Plugged in Algolia search

--- a/www/src/css/main.scss
+++ b/www/src/css/main.scss
@@ -23,6 +23,7 @@
 @import "nav";
 @import "note";
 @import "prefooter_nav";
+@import "search";
 @import "site";
 @import "traverse_nav";
 @import "underline";
