--- a/www/src/css/setup/_variables.scss
+++ b/www/src/css/setup/_variables.scss
@@ -1,3 +1,4 @@
+$c-lighter: #373940; // light blue
 $c-dark: #282c34; // dark blue
 $c-darker: #20232a; // really dark blue
 $c-brand: #61dafb; // electric blue
