--- a/www/src/components/Sidebar/Section.module.scss
+++ b/www/src/components/Sidebar/Section.module.scss
@@ -41,6 +41,18 @@
   }
 }
 
+.ExternalLink {
+  padding-right: 15px;
+
+  &:hover {
+    border-bottom-color: transparent;
+  }
+
+  &:after {
+    content: " " url(../../../../docs/img/external.png); // TODO Move to a better relative location
+  }
+}
+
 .ActiveLink {
   color: $c-text;
   font-weight: 700;
