--- a/www/src/components/MarkdownPage/MarkdownPage.module.scss
+++ b/www/src/components/MarkdownPage/MarkdownPage.module.scss
@@ -1,6 +1,7 @@
 // TODO Replace relative paths and/or auto-include these base files
 @import "../../css/setup/breakpoint";
 @import "../../css/setup/variables";
+@import "../../css/setup/mixins";
 @import "../../css/below_nav";
 @import "../../css/fonts";
 @import "../../css/note";
@@ -62,7 +63,7 @@
     }
   }
 
-  .gatsby-highlight {
+  :global .gatsby-highlight {
     margin-top: 30px;
 
     code {
@@ -78,7 +79,8 @@
     list-style: decimal;
   }
 
-  ul, ol {
+  ul,
+  ol {
     li {
       font-size: 18px;
       display: list-item;
@@ -94,20 +96,11 @@
   ul:not(:first-child),
   ol:not(:first-child) {
     padding-top: 30px;
-
-
   }
 
   :global {
     a:not(.anchor) {
-      background-color: rgba(#bbeffd, 0.5);
-      border-bottom: 1px solid rgba(#000, 0.2);
-      color: #1a1a1a;
-
-      &:hover {
-        background-color: rgba(#bbeffd, 1);
-        border-bottom-color: #1a1a1a;
-      }
+      @include link;
     }
   }
 
@@ -116,12 +109,29 @@
     margin-top: 45px;
   }
 
+  p + h2,
+  ul + h2,
+  ol + h2 {
+    border-top: 1px solid #ececec;
+    margin-top: (45px - 1px);
+    padding-top: 40px;
+  }
+
   h3 {
     @include f-h3;
     margin-top: 45px;
 
     & + p:not(:first-child) {
       margin-top: 20px;
+    }
+  }
+
+  h4 {
+    @include f-h4;
+    margin-top: 40px;
+
+    + p:not(:first-child) {
+      margin-top: 10px;
     }
   }
 
@@ -136,8 +146,13 @@
     @extend .note;
 
     max-width: 650px;
-    padding-top: 40px;
-    margin-top: 70px;
+    padding-top: 20px;
+    margin-top: 40px;
     margin-bottom: 20px;
+    padding-right: 40px;
+
+    p:first-child {
+      margin-top: 0;
+    }
   }
 }
