DOM Fixtures: Eject CRA. Add new test fixture creator page.
Before this commit, we relied on `window.React` to provide different
versions of React. This doesn't work for npm modules.

To do this, I setup an `externals` configuration in Webpack to specify
that `React`, `ReactDOM`, and `PropTypes` should come from the
window. create-react-app doesn't allow configuration of webpack, so
I've ejected the build and simplied things where possible.

--- a/fixtures/dom/src/style.css
+++ b/fixtures/dom/src/style.css
@@ -6,10 +6,15 @@
 
 html {
   font-size: 10px;
+  height: 100%;
 }
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   font-size: 1.4rem;
+  height: 100%;
   margin: 0;
   padding: 0;
 }
@@ -18,12 +23,22 @@ select {
   width: 12rem;
 }
 
-button {
-  margin: 10px;
-  font-size: 18px;
-  padding: 5px;
+button, .btn {
+  background: #48d0e8;
+  border-radius: 2px;
+  border: 0;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.18), inset 0 0 1px rgba(0, 0, 0, 0.12);
+  color: #0b262b;
+  display: inline-block;
+  font-family: inherit;
+  font-size: 11px;
+  font-weight: 500;
+  letter-spacing: 0.01em;
+  padding: 7px 10px;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.12);
+  text-transform: uppercase;
+  text-decoration: none;
 }
-
 
 .header {
   background: #222;
@@ -32,12 +47,12 @@ button {
   line-height: 3.2rem;
   overflow: hidden;
   padding: .8rem 1.6rem;
+  flex-shrink: 0;
 }
 
 .header__inner {
   display: table;
   margin: 0 auto;
-  max-width: 1000px;
   overflow: hidden;
   text-align: center;
   width: 100%;
@@ -71,6 +86,16 @@ button {
   width: 0;
 }
 
+.fill-height {
+  height: 100%;
+}
+
+.root-layout {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 .container {
   margin: 0 auto;
   max-width: 900px;
@@ -101,7 +126,8 @@ fieldset {
   overflow: hidden;
 }
 
-ul, ol {
+ul,
+ol {
   margin: 0 0 2rem 0;
 }
 
@@ -139,10 +165,19 @@ li {
 
 .test-case__title {
   padding: 10px 15px 8px;
-  line-height: 16px;
-  font-size: 18px;
+  line-height: 1;
+  font-size: 14px;
   border-bottom: 1px dashed #d9d9d9;
   margin: 0 0 -1px;
+}
+
+.test-case__heading {
+  font-size: 14px;
+  margin-bottom: 8px;
+}
+
+.test-case__steps {
+  padding: 0 0 0 1.25em;
 }
 
 .test-case__title__check {
@@ -211,4 +246,78 @@ li {
   margin: 0 -15px; /* opposite of .test-case padding */
   background-color: #f4f4f4;
   border-top: 1px solid #d9d9d9;
+}
+
+.fixture-set {
+  margin: 20px auto;
+  max-width: 1024px;
+  padding: 0 20px;
+}
+
+.playground {
+  display: flex;
+  height: 100%;
+  width: 100%;
+}
+
+.playgroundCode,
+.playgroundStage {
+  height: 100%;
+}
+
+.playgroundCode,
+.playgroundPreview {
+  height: 100%;
+  flex: 1 1;
+}
+
+.playgroundPreview {
+  padding: 0 16px;
+}
+
+.playground .CodeMirror {
+  font-family: 'Operator', 'Inconsolata', 'Fira Code', 'Menlo', 'Consolas', 'DejaVu Sans Mono', monospace;
+  font-size: 14px;
+  height: auto;
+  line-height: 1.5;
+}
+
+.playgroundCode {
+  background: #272822;
+  overflow: auto;
+  padding: 16px;
+}
+
+
+.playgroundError {
+  background: rgba(200, 70, 70, 0.5);
+  border: 1px solid rgba(200, 70, 70, 0.88);
+  color: #3a0811;
+  font-family: 'Operator', 'Inconsolata', 'Fira Code', 'Menlo', 'Consolas', 'DejaVu Sans Mono', monospace;
+  overflow: auto;
+  padding: 8px 12px;
+  margin-top: 16px;
+  white-space: pre;
+  font-size: 12px;
+  text-shadow: 0 1px 0px rgba(255, 255, 255, 0.12);
+}
+
+.playgroundError:first-line {
+  display: block;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.playgroundFooter {
+  background: #222;
+  border-top: 1px solid #181818;
+  padding: 10px 12px;
+  width: 100%;
+  color: #eef;
+  font-size: 12px;
+  flex-shrink: 0;
+}
+
+.playgroundFooter button {
+  margin-right: 12px;
 }
